--- a/outlier.ipynb
+++ b/outlier.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -59,23 +59,21 @@
      "output_type": "stream",
      "text": [
       "wine\n",
-      "LocalOutlierFactor()\n",
       "0.014935661764705883\n",
       "adult\n",
-      "LocalOutlierFactor()\n",
       "0.06756818702727481\n",
       "compHardware\n",
-      "LocalOutlierFactor()\n",
-      "0.17142857142857143\n",
+      "0.22142857142857142\n",
       "breastCancer\n",
-      "LocalOutlierFactor()\n",
-      "0.05774278215223097\n",
+      "0.047244094488188976\n",
       "tempForecast\n",
-      "LocalOutlierFactor()\n",
       "0.003146509341199607\n",
       "CCPP\n",
-      "LocalOutlierFactor()\n",
-      "0.01185647425897036\n"
+      "0.01185647425897036\n",
+      "abalone\n",
+      "0.05003573981415296\n",
+      "bank\n",
+      "0.021722623881681027\n"
      ]
     }
    ],
@@ -86,12 +84,15 @@
     "    df = dfs[data]\n",
     "    \n",
     "    categorical = df.select_dtypes('category')\n",
-    "    X = df.drop([target], axis=1)\n",
+    "    # X = df.drop([target], axis=1)\n",
     "    X = df.drop(categorical,axis=1)\n",
+    "    if data == 'compHardware':\n",
+    "        X = X.drop(['vendor name'], axis=1)\n",
     "    y = df[target]\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=1)\n",
+    "    # print(X_train.head())\n",
     "    lof = LocalOutlierFactor()\n",
-    "    print(lof.decision_function)\n",
+    "    # print(lof.decision_function)\n",
     "    yhat = lof.fit_predict(X_train)\n",
     "    out = len(np.where(yhat==-1)[0])\n",
     "    rest = len(yhat)\n",
@@ -112,7 +113,7 @@
    "hash": "2dd8ccf6958a08fc7674deee7c71f19888ab4f39532ccc11b7e008702b8125f2"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit ('school': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -126,10 +127,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.12"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
